prevent brief horizontal scrollbars when image zooms outside viewport

--- a/source/css/site.css.scss
+++ b/source/css/site.css.scss
@@ -23,6 +23,7 @@ body {
 		family: $body-font;
 		size: 14px;
 	}
+	overflow-x: hidden;
 }
 
 button, input, select, textarea { font-family: $body-font; }
